src/test/deca/codegen/valid/entier1.ass
; Main Program
	TSTO #1
	BOV pile_pleine
	ADDSP #1
; start main program
; Main program
; Beginning of main instructions:
	LOAD #1, R1
	STORE R1, 1(GB)
	LOAD 1(GB), R1
	WINT
	WNL
	LOAD 1(GB), R1
	LOAD #1, R3
	ADD R3, R1
	BOV overflow_arith
	STORE R1, 1(GB)
	LOAD 1(GB), R1
	WINT
	WNL
	HALT
; Message d'erreurs
pile_pleine:
	WSTR "Erreur : debordement de pile"
	WNL
	ERROR
overflow_arith:
	WSTR "Erreur : overflow_arithmetique"
	WNL
	ERROR
; end main program
