src/test/deca/codegen/invalid/overflow.ass
; Main Program
	TSTO #1
	BOV pile_pleine
	ADDSP #1
; start main program
; Main program
; Beginning of main instructions:
	LOAD #2147483647, R3
	STORE R3, 1(GB)
	LOAD 1(GB), R1
	LOAD #1, R3
	ADD R3, R1
	BOV overflow_arith
	WINT
	HALT
; Message d'erreurs
pile_pleine:
	WSTR "Erreur : debordement de pile"
	WNL
	ERROR
overflow_arith:
	WSTR "Erreur : overflow_arithmetique"
	WNL
	ERROR
; end main program
